--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "cookie-parser": "^1.4.7",
     "cross-env": "^7.0.3",
     "cross-var": "^1.1.0",
+    "crypto": "^1.0.1",
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "firebase-admin": "^13.4.0",
